# turtlebot-maze

./: .env  .env.example  .gitignore  .markdown-link-check.json  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  age-init.sql  dependencies.repos  docker-compose.yaml  pyproject.toml  vector-init.sql
.beads/: .gitignore  (+3 more)
slam/: CMakeLists.txt  requirements.txt  run_slam.cc  slam_bridge.py  test_aruco_detection.py
slam/config/: d435i_rgbd.yaml  turtlebot_realsense.yaml
tb_worlds/: CMakeLists.txt
tb_worlds/configs/: turtlebot3_bridge.yaml
tb_worlds/launch/: aruco_marker_spawner.launch.py  block_spawner.launch.py  tb_demo_world.launch.py  tb_world.launch.py
tb_worlds/maps/: bookstore_world_map.yaml  house_world_map.yaml  warehouse_world_map.yaml
tb_worlds/models/aruco_80_2/: model.sdf
tb_worlds/models/aruco_id_60/: model.config  model.sdf
tb_worlds/models/aruco_id_80/: model.config  model.sdf
tb_worlds/models/aws_robomaker_residential_AirconditionerA_01/: model.sdf
tb_worlds/models/aws_robomaker_residential_AirconditionerB_01/: model.sdf
tb_worlds/models/aws_robomaker_residential_BalconyTable_01/: model.sdf
tb_worlds/models/aws_robomaker_residential_Ball_01/: model.sdf
tb_worlds/models/aws_robomaker_residential_Bed_01/: model.sdf
tb_worlds/models/aws_robomaker_residential_Board_01/: model.sdf
tb_worlds/models/aws_robomaker_residential_Carpet_01/: model.sdf
tb_worlds/models/aws_robomaker_residential_ChairA_01/: model.sdf
tb_worlds/models/aws_robomaker_residential_ChairD_01/: model.sdf
tb_worlds/models/aws_robomaker_residential_Chandelier_01/: model.sdf
tb_worlds/rviz/: nav2_turtlebot_view.rviz
tb_worlds/urdf/: gz_waffle.sdf.xacro
tb_worlds/worlds/: bookstore_world.sdf.xacro  house_world.sdf.xacro  sim_house.sdf.xacro.backup  sim_house_enhanced.sdf.xacro  sim_house_vio.sdf.xacro  warehouse_world.sdf.xacro  world_fle.sdf
(+153 files in other folders)
